--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
 </div>
 
-<table id="tableId" align="center"  bordercolor="0ab169" style="font-size: 22px;">
+<table id="tableId" align="center"  width="70%" bordercolor="0ab169" style="font-size: 22px;">
     <tr bordercolor="0ab169">
-        <td id="nameId" bgcolor="#0ab169">
-            <input type="text" id="inputNumber" onkeyup="searchNumber()" placeholder="Номер" title="Type in a name" width="20px">
+        <td id="nameId" class="search" bgcolor="#0ab169">
+            <input type="text" id="inputNumber" onkeyup="searchNumber()" placeholder=" Поиск..." >
         </td>
-        <td id="nameId" bgcolor="#d3d3d3" >
-            <input type="text" id="inputName" onkeyup="searchName()" placeholder="Имя">
+        <td id="nameId" class="search" bgcolor="#d3d3d3" >
+            <input type="text" id="inputName" onkeyup="searchName()" placeholder=" Поиск...">
         </td>
-        <td id="phoneId" bgcolor="#d3d3d3" >
-            phone
+        <td id="phoneId" class="search" bgcolor="#d3d3d3" >
+            <input type="text" id="inputTel" onkeyup="searchTel()" placeholder=" Поиск...">
         </td>
-        <td id="mobileId" bgcolor="#d3d3d3" >
-            mobile
+        <td id="mobileId" class="search" bgcolor="#d3d3d3" >
+            <input type="text" id="inputMob" onkeyup="searchMob()" placeholder=" Поиск...">
         </td>
-        <td id="emailId" bgcolor="#d3d3d3">
-            email
+        <td id="emailId" class="search" bgcolor="#d3d3d3">
+            <input type="text" id="inputEmail" onkeyup="searchEmail()" placeholder=" Поиск...">
         </td>
-        <td id="positionId" bgcolor="#d3d3d3">
-            position
+        <td id="positionId" class="search" bgcolor="#d3d3d3">
+            <input type="text" id="inputPosition" onkeyup="searchPosition()" placeholder=" Поиск...">
         </td>
-        <td id="departmentId" bgcolor="#d3d3d3">
-            department
+        <td id="departmentId" class="search" bgcolor="#d3d3d3">
+            <input type="text" id="inputDepartment" onkeyup="searchDepartment()" placeholder=" Поиск...">
         </td>
     </tr>
     <tr bordercolor="0ab169">
@@ -44,22 +44,22 @@
             №
         </td>
         <td id="nameId" bgcolor="#d3d3d3" >
-            name
+            Имя
         </td>
         <td id="phoneId" bgcolor="#d3d3d3" >
-            phone
+            Телефон
         </td>
         <td id="mobileId" bgcolor="#d3d3d3" >
-            mobile
+            Моб. телефон
         </td>
         <td id="emailId" bgcolor="#d3d3d3">
-            email
+            Email
         </td>
         <td id="positionId" bgcolor="#d3d3d3">
-            position
+            Должность
         </td>
         <td id="departmentId" bgcolor="#d3d3d3">
-            department
+            Отдел
         </td>
     </tr>
 
