--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
             Отдел
         </td>
     </tr>
-
 </table>
+<div id="about" style="opacity: 50%" align="right"><button id="thanks" onclick="thanks()">Спасибо!</button><br>Enjoy using! <a href="https://github.com/igordg777">© iGorG</a></div>
 <script src="js/index.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </body>
 </html>
