--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </tr>
 </table>
 
-<div id="about" style="opacity: 50%" align="right"><button id="thanks" onclick="thanks()">Спасибо!</button><br>Enjoy using! <a href="https://github.com/igordg777">© iGorG</a></div>
+<div id="about" style="opacity: 50%" align="right"><button id="thanks" onclick="thanks()">Спасибо!</button>
+   <br>Enjoy using! © iGorG<a href="https://www.instagram.com/it.sea/?hl=ru"><img class="icons" height="20px" src="./icons/inst.png" alt="instagram"></a><a href="https://github.com/igordg777"><img class="icons" height="20px" src="./icons/github.png" alt="github"></a></div>
 <script src="js/index.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
