--- a/start.html
+++ b/start.html
@@ -11,8 +11,7 @@
 <body>
 <h2 align="center">Телефонный справочник Вашей компании</h2>
 
-<div align="center">
-</div>
+<div id="result" style="opacity: 50%" align="right"></div>
 
 <table id="tableId" align="center"  width="70%" bordercolor="black" style="font-size: 22px;border-style: dashed">
     <tr bordercolor="0ab169">
@@ -67,8 +66,10 @@
 </table>
 
 <div id="about" style="opacity: 50%" align="right"><button id="thanks" onclick="thanks()">Спасибо!</button>
-   <br>Enjoy using! © iGorG<a href="https://www.instagram.com/it.sea/?hl=ru"><img class="icons" height="20px" src="./icons/inst.png" alt="instagram"></a><a href="https://github.com/igordg777"><img class="icons" height="20px" src="./icons/github.png" alt="github"></a></div>
+   <br>Enjoy using! © iGorG<a href="https://www.instagram.com/it.sea/?hl=ru"><img class="icons" height="20px" src="./icons/inst.png" alt="instagram"></a><a href="https://github.com/igordg777/tableSearch"><img class="icons" height="20px" src="./icons/github.png" alt="github"></a></div>
+<script src="phone_book.js"></script>
 <script src="js/index.js"></script>
+
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
